# lol-auto-accepter

./: CHANGELOG.md  Image-Clicker(v1.2).py  README.md  build_exe.bat  pyproject.toml
.github/workflows/: release.yml
src/clicker/: __init__.py  imaging.py
